# Audient

./: .dockerignore  .env.example  .gitignore  AI_Audience_Agent__1_.docx  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  main.py
app/agent/: __init__.py  graph_builder.py  observability.py  utils.py
app/agent/nodes/: __init__.py  input_node.py  output_node.py  parsing_node.py  validation_node.py
app/core/: __init__.py  config.py  errors.py  logger.py
app/routes/: __init__.py  parse_prompt.py
app/schemas/: __init__.py  filter_schema.py  prompt_schema.py
app/tests/: __init__.py  conftest.py  dataset.json  test_parser_ar.py  test_parser_en.py  test_validation.py
data/: examples_en_ar.json  supported_fields.json  value_mappings.json
docker/: Dockerfile  docker-compose.yml
docs/: api_spec.md  architecture.md  testing_plan.md
scripts/: deploy_aws.sh  evaluate_accuracy.py  run_local.sh
